apps/status-page/databases-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: status-page
spec:
  ports:
  - port: 5432
  selector:
    app.kubernetes.io/name: postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: status-page
spec:
  ports:
  - port: 6379
  selector:
    app.kubernetes.io/name: redis
